--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 # Add regular dependencies here.
 dependencies:
   charset: ^2.0.1
+  dart_numerics: ^0.0.6
   intl: ^0.18.1
   petitparser: ^6.0.1
 
