--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   charset: ^2.0.1
   dart_numerics: ^0.0.6
   intl: ^0.18.1
+  meta: ^1.11.0
   petitparser: ^6.0.1
 
 dev_dependencies:
