--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  characters: ^1.3.0
   charset: ^2.0.1
   dart_numerics: ^0.0.6
   intl: ^0.18.1
