--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: mapiah
 description: A starting point for Dart libraries or applications.
-version: 1.0.0
+version: 0.0.1
 repository: https://github.com/rsevero/mapiah.git
 
 environment:
@@ -16,9 +16,13 @@ dependencies:
   get: ^4.6.1
   file_picker: ^6.1.1
   open_file: ^3.3.2
+  package_info_plus: ^4.2.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+
+flutter:
+  uses-material-design: true
