--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,20 +8,21 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
+  analyzer: ^6.2.0
   charset: ^2.0.1
   dart_numerics: ^0.0.6
-  intl: ^0.18.1
-  meta: ^1.9.1
-  petitparser: ^6.0.1
-  get: ^4.6.1
   file_picker: ^6.1.1
-  open_file: ^3.3.2
-  package_info_plus: ^4.2.0
   flutter:
     sdk: flutter
+  get: ^4.6.1
+  intl: ^0.18.1
+  meta: ^1.9.1
+  open_file: ^3.3.2
+  package_info_plus: ^4.2.0
+  petitparser: ^6.0.1
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^3.0.0
   test: ^1.21.0
 
 flutter:
