--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: mapiah
 description: Graphical interface for Therion cave mapping software written in Flutter.
 version: 0.0.1+1
+homepage: https://mapiah.org
 repository: https://github.com/rsevero/mapiah.git
+issue_tracker: https://github.com/rsevero/mapiah/issues
 
 environment:
   sdk: '>=3.1.5 <4.0.0'
@@ -14,8 +16,10 @@ dependencies:
   file_picker: ^6.1.1
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.1
   get: ^4.6.1
   intl: ^0.18.1
+  json_annotation: ^4.8.1
   meta: ^1.9.1
   open_file: ^3.3.2
   package_info_plus: ^4.2.0
@@ -23,9 +27,12 @@ dependencies:
   petitparser: ^6.0.1
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
   test: null
 
 dependency_overrides:
