--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ aux/line_options_testing/line_options_testing.pdf
 
 build/**
 
+.idea/**
+
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
