--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,23 +16,22 @@ dependencies:
   file_picker: ^6.1.1
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.4.1
   get: ^4.6.1
   intl: ^0.18.1
-  json_annotation: ^4.8.1
   meta: ^1.9.1
+  mobx: ^2.5.0
   open_file: ^3.3.2
   package_info_plus: ^4.2.0
   path_provider: ^2.1.1
   petitparser: ^6.0.1
+  provider: ^6.1.2
 
 dev_dependencies:
-  build_runner: ^2.4.6
+  build_runner: ^2.4.14
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  freezed: ^2.4.5
-  json_serializable: ^6.7.1
+  mobx_codegen: ^2.7.0
   test: null
 
 dependency_overrides:
