--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,31 +12,30 @@ environment:
 dependencies:
   analyzer: ^6.0.0
   charset: ^2.0.1
+  dart_mappable: ^4.3.0
   dart_numerics: ^0.0.6
-  file_picker: ^6.1.1
+  file_picker: ^8.1.6
   flutter:
     sdk: flutter
   flutter_mobx: ^2.3.0
   get: ^4.6.1
-  intl: ^0.18.1
+  intl: ^0.20.1
   meta: ^1.9.1
   mobx: ^2.5.0
   open_file: ^3.3.2
-  package_info_plus: ^4.2.0
+  package_info_plus: ^8.1.2
   path_provider: ^2.1.1
   petitparser: ^6.0.1
   provider: ^6.1.2
 
 dev_dependencies:
   build_runner: ^2.4.14
-  flutter_lints: ^2.0.0
+  dart_mappable_builder: ^4.3.0
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.7.0
   test: null
-
-dependency_overrides:
-  test_api: 0.6.1
 
 flutter:
   uses-material-design: true
