--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,31 +11,30 @@ environment:
 # Add regular dependencies here.
 dependencies:
   analyzer: ^6.0.0
-  charset: ^2.0.1
+  charset: ^2.0.0
   dart_mappable: ^4.3.0
   dart_numerics: ^0.0.6
-  file_picker: ^8.1.6
+  file_picker: ^8.0.0
   flutter:
     sdk: flutter
-  flutter_mobx: ^2.3.0
-  get: ^4.6.1
+  flutter_mobx: ^2.0.0
   intl: ^0.20.1
-  meta: ^1.9.1
-  mobx: ^2.5.0
-  open_file: ^3.3.2
-  package_info_plus: ^8.1.2
-  path_provider: ^2.1.1
-  petitparser: ^6.0.1
-  provider: ^6.1.2
+  meta: ^1.0.0
+  mobx: ^2.0.0
+  open_file: ^3.0.0
+  package_info_plus: ^8.0.0
+  path_provider: ^2.0.0
+  petitparser: ^6.0.0
+  provider: ^6.0.0
 
 dev_dependencies:
-  build_runner: ^2.4.14
-  dart_mappable_builder: ^4.3.0
+  build_runner: ^2.0.0
+  dart_mappable_builder: ^4.0.0
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
-  mobx_codegen: ^2.7.0
-  test: null
+  mobx_codegen: ^2.0.0
+  test: ^1.0.0
 
 flutter:
   uses-material-design: true
