--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   file_picker: ^8.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_mobx: ^2.0.0
-  intl: ^0.20.1
+  intl: any
   meta: ^1.0.0
   mobx: ^2.0.0
   open_file: ^3.0.0
