--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ dependencies:
   file_picker: ^8.0.0
   flutter:
     sdk: flutter
+  flutter_gen: ^5.8.0
   flutter_localizations:
     sdk: flutter
   flutter_mobx: ^2.0.0
   intl: any
+  intl_utils: ^2.8.7
   meta: ^1.0.0
   mobx: ^2.0.0
   open_file: ^3.0.0
