--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   path_provider: ^2.0.0
   petitparser: ^6.0.0
   provider: ^6.0.0
+  toml: ^0.16.0
 
 dev_dependencies:
   build_runner: ^2.0.0
