--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_mobx: ^2.0.0
+  get_it: ^8.0.3
   intl: any
   intl_utils: ^2.8.7
   meta: ^1.0.0
