--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_mobx: ^2.0.0
+  flutter_svg: ^2.0.17
   get_it: ^8.0.3
   intl: any
   intl_utils: ^2.8.7
@@ -44,3 +45,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icons/zoom_plus_minus.svg
