--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,4 +46,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/icons/pan-tool.png
+    - assets/icons/select-tool.png
     - assets/icons/zoom_plus_minus.svg
