--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ environment:
 dependencies:
   analyzer: ^6.0.0
   charset: ^2.0.0
+  collection: ^1.19.0
   dart_mappable: ^4.3.0
   dart_numerics: ^0.0.6
   file_picker: ^8.0.0
