--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   get_it: ^8.0.3
   intl: any
   intl_utils: ^2.8.7
+  logger: ^2.5.0
   meta: ^1.0.0
   mobx: ^2.0.0
   open_file: ^3.0.0
