--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mobx: ^2.0.0
   open_file: ^3.0.0
   package_info_plus: ^8.0.0
+  path: ^1.9.0
   path_drawing: ^1.0.1
   path_provider: ^2.0.0
   petitparser: ^6.0.0
