--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_gen: ^5.8.0
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.7+1
   flutter_mobx: ^2.0.0
   intl: any
   intl_utils: ^2.8.7
@@ -58,3 +59,4 @@ flutter:
     - assets/icons/zoom_plus.png
     - assets/icons/zoom_selection.png
     - assets/icons/zoom-out-scrap.png
+    - assets/help/en/mapiah_home_help.md
