--- a/packaging/linux/org.mapiah.Mapiah.desktop
+++ b/packaging/linux/org.mapiah.Mapiah.desktop
@@ -1,12 +1,11 @@
 [Desktop Entry]
-Version=0.1.0
 Type=Application
 
 Name=Mapiah
 Comment=User friendly Therion map editor
 Categories=Graphics;
 
-Icon=org.mapiah.Mapiah.png
+Icon=org.mapiah.Mapiah
 Exec=mapiah
 Terminal=false
 StartupWMClass=mapiah
