--- a/packaging/linux/io.github.rsevero.Mapiah.desktop
+++ b/packaging/linux/io.github.rsevero.Mapiah.desktop
@@ -5,7 +5,7 @@ Name=Mapiah
 Comment=User friendly Therion map editor
 Categories=Graphics;
 
-Icon=org.mapiah.Mapiah
+Icon=io.github.rsevero.Mapiah
 Exec=mapiah
 Terminal=false
 StartupWMClass=mapiah
