ID = to repo name

--- a/packaging/linux/io.github.rsevero.mapiah.desktop
+++ b/packaging/linux/io.github.rsevero.mapiah.desktop
@@ -5,7 +5,7 @@ Name=Mapiah
 Comment=User friendly Therion map editor
 Categories=Graphics;
 
-Icon=io.github.rsevero.Mapiah
+Icon=io.github.rsevero.mapiah
 Exec=mapiah
 Terminal=false
 StartupWMClass=mapiah
