--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "Mapiah, a Flutter editor of Therion files" "\0"
+            VALUE "FileDescription", "mapiah" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "mapiah" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "mapiah.exe" "\0"
-            VALUE "ProductName", "Mapiah" "\0"
+            VALUE "ProductName", "mapiah" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
