--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   path_provider: ^2.0.0
   petitparser: ^6.0.0
   toml: ^0.16.0
+  url_launcher: ^6.3.1
   web: ^1.1.1
   window_size: ^0.1.0
 
