--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,7 +8,7 @@ workflows:
       # vars:
       #   GITHUB_TOKEN: Encrypted(...) # Você criará esse secret no painel do Codemagic
       groups:
-        - github
+        - mapiah_github_token
 
     triggering:
       events:
@@ -44,7 +44,7 @@ workflows:
       - name: Create GitHub Release with GH CLI
         script: |
           # Set up GitHub CLI authentication
-          gh auth setup-git
+          echo "$GITHUB_TOKEN" | gh auth login --with-token
 
           # Optionally, generate or copy your changelog
           # For example, if you have a changelog.md already:
