MacOS release: fixing gh create - take 7

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -39,6 +39,7 @@ workflows:
           # brew install node
           # npm install -g appdmg
           # appdmg appdmg.json build/macos/Mapiah.dmg
+          mkdir -p build/macos
           touch build/macos/Mapiah.dmg
 
     artifacts:
