--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -30,16 +30,14 @@ workflows:
       - name: Build MacOS release
         script: |
           set -e
-          # flutter build macos --release
-          touch build
+          flutter build macos --release
 
       - name: Create DMG
         script: |
           set -e
-          # brew install node
-          # npm install -g appdmg
-          # appdmg appdmg.json build/macos/Mapiah.dmg
-          touch Mapiah.dmg
+          brew install node
+          npm install -g appdmg
+          appdmg appdmg.json build/macos/Mapiah.dmg
 
     artifacts:
       - build/macos/Mapiah.dmg
@@ -60,10 +58,12 @@ workflows:
           # For example, if you have a changelog.md already:
           # cp path/to/your/changelog.md changelog.md
 
-          CM_TAG=v0.2.4-test1
+          # Manually setting CM_TAG for debugging purposes
+          # This should be set to the tag that triggered the workflow
+          CM_TAG=v0.2.4
 
           # Create the release
           gh release create "${CM_TAG}" \
             --title "Mapiah ${CM_TAG}" \
             --notes "Release ${CM_TAG}" \
-            Mapiah.dmg
+            build/macos/Mapiah.dmg
