--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -3,16 +3,48 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
+    inputs:
+      test_tag:
+        description: 'Simulated tag (must match vX.Y.Z format)'
+        required: false
+        default: 'v1.0.0-test'
+
 jobs:
   main:
     runs-on: windows-latest
     steps:
+      - name: Validate tag format
+        id: validate-tag
+        run: |
+          TAG=${GITHUB_REF#refs/tags/}
+          if [ -z "$TAG" ]; then
+            TAG=${{ github.event.inputs.test_tag }}
+          fi
+
+          if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "::error::Invalid tag format: $TAG (must match vX.Y.Z)"
+            exit 1
+          fi
+
+          echo "TAG_NAME=$TAG" >> $GITHUB_O
+
+      - name: Debug environment
+        run: |
+          echo "Validated tag: ${{ steps.validate-tag.outputs.TAG_NAME }}"
+          echo "GITHUB_REF: $GITHUB_REF"
+          echo "Input tag: ${{ github.event.inputs.test_tag }}"UTPUT
+          echo "Using validated tag: $TAG"
+
       - name: Clone repository
         uses: actions/checkout@v4
+        with:
+          ref: ${{ steps.validate-tag.outputs.TAG_NAME }}
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
           flutter-version: 3.32.4
+
       - run: flutter --version
-      
