--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       test_tag:
-        description: 'Simulated tag (must match vX.Y.Z format)'
+        description: 'Simulated tag for testing'
         required: false
         default: 'v1.0.0-test'
 
@@ -14,33 +14,33 @@ jobs:
   main:
     runs-on: windows-latest
     steps:
-      - name: Validate tag format
-        id: validate-tag
+      - name: Determine tag
+        id: determine-tag
         shell: bash
         run: |
-          TAG=${GITHUB_REF#refs/tags/}
-          if [ -z "$TAG" ]; then
-            TAG=${{ github.event.inputs.test_tag }}
+          if [[ "${{ github.event_name }}" == "push" ]]; then
+            # Only validate format for automatic tag pushes
+            TAG=${GITHUB_REF#refs/tags/}
+            if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo "::error::Invalid tag format: $TAG (must match vX.Y.Z)"
+              exit 1
+            fi
+          else
+            # For workflow_dispatch, use input directly
+            TAG="${{ github.event.inputs.test_tag }}"
           fi
+          echo "TAG_NAME=$TAG" >> $GITHUB_OUTPUT
+          echo "Using tag: $TAG"
 
-          if [[ ! "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "::error::Invalid tag format: $TAG (must match vX.Y.Z)"
-            exit 1
-          fi
-
-          echo "TAG_NAME=$TAG" >> $GITHUB_O
-
-      - name: Debug environment
+      - name: Debug output
         run: |
-          echo "Validated tag: ${{ steps.validate-tag.outputs.TAG_NAME }}"
-          echo "GITHUB_REF: $GITHUB_REF"
-          echo "Input tag: ${{ github.event.inputs.test_tag }}"UTPUT
-          echo "Using validated tag: $TAG"
+          echo "Triggered by: ${{ github.event_name }}"
+          echo "Using tag: ${{ steps.determine-tag.outputs.TAG_NAME }}"
 
       - name: Clone repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ steps.validate-tag.outputs.TAG_NAME }}
+          ref: ${{ steps.determine-tag.outputs.TAG_NAME }}
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
