--- a/.github/workflows/windows_release.yml
+++ b/.github/workflows/windows_release.yml
@@ -65,11 +65,11 @@ jobs:
       - name: Create ZIP artifact
         shell: bash
         run: |
-          cd build/windows/runner/Release
+          cd build/windows/x64/runner/Release
           7z a -r Mapiah-Windows-${{ github.event_name == 'push' && github.ref_name || 'latest' }}.zip ./*
-          
-      # - name: Upload artifact
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: Mapiah-Windows-${{ github.event_name == 'push' && github.ref_name || 'latest' }}
-      #     path: build/windows/runner/Release/Mapiah-Windows-*.zip
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: Mapiah-Windows-${{ github.event_name == 'push' && github.ref_name || 'latest' }}
+          path: build/windows/x64/runner\Release/Mapiah-Windows-*.zip
